src/objects/IEC_User_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_Description__c</fullName>
        <description>Description of the log</description>
        <label>Log Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>New Value</description>
        <label>New Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>Old Value</description>
        <label>Old Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related user who&apos;s logs are stored</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IEC_User_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IEC User Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Subscription_Number__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>User_Logs</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Number__c</columns>
        <columns>Log_Description__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>User Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UL-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC User Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>